# ffmpegrust

./: .gitignore  Cargo.toml  README.md  build-all-releases.sh  build-windows-installer.bat  create-release.bat  create-release.sh  run.bat  run.sh
.github/workflows/: main.yml  release.yml  simple-release.yml  test-build.yml
assets/: README.md
installer/: windows-installer.nsi
src/: app.rs  config.rs  conversion.rs  ffmpeg_installer.rs  main.rs  presets.rs  updater.rs  utils.rs
src/constants/: mod.rs
src/conversion/: mod.rs
src/events/: mod.rs
src/presets/: mod.rs
src/security/: mod.rs
src/services/: config_service.rs  conversion_service.rs  file_service.rs  mod.rs  validation_service.rs
src/state/: mod.rs
src/ui/: mod.rs
