[package]
name = "ffmpegrust"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A simple, minimalistic GUI for video conversion and remuxing using FFmpeg"
license = "MIT"

[dependencies]
eframe = { version = "0.25", features = ["default"] }
egui = "0.25"
rfd = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "process", "time", "fs", "io-util"] }
regex = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
semver = "1.0"
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }
